very very minor performance improvements